--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: A virtual proof that name is awesome!
 
 # List of links in the navigation bar
 navbar-links:
+  Home : "index"
   About Me: "aboutme"
   Blog: "blog"
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
