--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ description: A virtual proof that name is awesome!
 
 # List of links in the navigation bar
 navbar-links:
-  Home : "index"
+  Blog: ""
   About Me: "aboutme"
-  Blog: "blog"
+  
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   # Author's home: "http://deanattali.com"
 
