--- a/_config.yml
+++ b/_config.yml
@@ -42,22 +42,22 @@ avatar: "/img/dp-1.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+#navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+#footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
- navbar-img: "/img/bgimage.png"
- footer-img: "/img/bgimage.png"
- page-img: "/img/bgimage.png"
+ navbar-img: "/img/path.jpg"
+ footer-img: "/img/avatar-icon.png"
+ #page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
 
