--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: A virtual proof that name is awesome!
 # List of links in the navigation bar
 navbar-links:
   Blog: ""
-  About Me: "aboutme"
+  #About Me: "aboutme"
   
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   # Author's home: "http://deanattali.com"
@@ -124,7 +124,7 @@ share-links-active:
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "vasubandaru-github-io."
+disqus: "vasubandaru-github-io"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
