--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   Blog: ""
   #About Me: "aboutme"
   
-    #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+  #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   # Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -55,9 +55,9 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
- navbar-img: "/img/path.jpg"
- footer-img: "/img/foot.png"
- #page-img: "/img/bgimage.png"
+navbar-img: "/img/path.jpg"
+footer-img: "/img/foot.png"
+#page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
 
@@ -124,7 +124,7 @@ share-links-active:
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "vasubandaru-github-io"
+disqus: "vasubandaru-github-io."
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
