--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: A virtual proof that name is awesome!
 # List of links in the navigation bar
 navbar-links:
   Blog: ""
-  #About Me: "aboutme"
+  About Me: "aboutme"
   
   #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   # Author's home: "http://deanattali.com"
@@ -42,21 +42,21 @@ avatar: "/img/dp-1.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-#navbar-col: "#F5F5F5"
+navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-#footer-col: "#F5F5F5"
+footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-navbar-img: "/img/path.jpg"
-footer-img: "/img/foot.png"
+#navbar-img: "/img/path.jpg"
+#footer-img: "/img/foot.png"
 #page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
@@ -124,7 +124,7 @@ share-links-active:
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "vasubandaru-github-io."
+disqus: "vasubandaru-github-io"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
