--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ share-links-active:
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "UA-126623259-1"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-126623259-1"
 
 # Google Tag Manager ID
 #gtm: ""
